@@ -51,6 +51,9 @@ Core
 * Vend::SQL_Parser required LIMIT clause to be lowercase when it should be
   case-insensitive 
 
+* Fix [on-match]/[no-match] for loop lists without matchlimit generated from
+  embedded Perl objects
+    
 UserDB
 ------
 
